made file lines on the very right have a visible margin; this margin was previously lost when overflow-x was implemented; using inline-block fixes prblem

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -38,7 +38,6 @@ body {
   padding-top: 13px !important;
   font-size: 14px !important;
   min-width: 80px;
-
 }
 
 .navbar-brand-match-tabs{
@@ -105,7 +104,6 @@ body {
 
 .files-panel {
   max-height: 520px;
-  max-width: 550px;
   box-shadow: 3px 3px 10px #333, 0px 2px 10px #444;
   border: none;
   display: inline-block;
@@ -125,7 +123,7 @@ body {
 
 .files-panel-body{ 
   max-height: 400px;
-  overflow-x: scroll !important;
+  overflow-y: scroll;
   padding-top: 19px;
   padding-bottom: 19px;
   padding-left: 19px;
